# NLP-Projects

./: README.md  multilayer_perceptron.py  utils.py
N-gram and Transformer/: README.md  load_data_ngram.py  load_data_transformer.py  n_gram.py  perplexity.py  pyproject.toml  test_output.txt  transformer.py  wer.py
N-gram and Transformer/results/: character_n_gram_test_wer_predictions.csv  subword_n_gram_test_wer_predictions.csv  transformer_test_wer_predictions.csv
N-gram and Transformer/tests/: test_transformer.py
Natural Language to SQL Translator/: README.md  load_data.py  prompting.py  prompting_utils.py  pyproject.toml  t5_utils.py  train_t5.py  utils.py
Natural Language to SQL Translator/results/: llm_test.sql  t5_ft_ft2ep_dev.sql  t5_ft_smoke_dev.sql  t5_ft_test.sql  t5_scr_t5_scr_baseline_dev.sql  t5_scr_test.sql
Perceptrons and MLPs/: .gitignore  README.md  features.py  perceptron.py
Perceptrons and MLPs/results/: perceptron_newsgroups_bow+subj+bigram+lex_dev_predictions.csv  perceptron_newsgroups_test_predictions.csv  perceptron_sst2_bow+trigram+lex+neg_dev_predictions.csv  perceptron_sst2_test_predictions.csv
Word2Vec/: README.md  load_data.py  pyproject.toml  word2vec.py
Word2Vec/tests/: test_word2vec.py
results/: mlp_newsgroups_test_predictions.csv  mlp_sst2_test_predictions.csv
